--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,6 +6,8 @@
   --lightBlue: #065473;
   --aquaBlue: #08748C;
   --gren: #02735E;
+  --lightGray: #cecece
+  --red: #dc143c;
   --gap: 3rem;
 }
 
@@ -52,11 +54,16 @@ h6 {
   font-size: 3.2rem;
 }
 
+a {
+  text-decoration: none;
+}
+
 .main-bg {
   background-image: url('../img/bg-color.svg');
   background-size: cover;
   background-position: center center;
   color: var(--white);
+  margin-top: 3rem;
 }
 
 .white-bg {
@@ -64,7 +71,7 @@ h6 {
 }
 
 .main-content {
-  max-width: 1200px;
+  max-width: 120rem;
   margin: 0 auto;
   padding: var(--gap);
 }
@@ -72,3 +79,62 @@ h6 {
 .main-section {
   height: 100vh;
 }
+
+.menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  border-bottom: 0.1rem solid var(--lightGray);
+}
+
+.menu-content {
+  display: flex;
+  align-items: center;
+  padding-top: 0;
+  padding-bottom: 0;
+  justify-content: space-between;
+}
+
+.menu h1 {
+  font-size: 2.9rem;
+  color: var(--blue);
+}
+
+.menu h1 a {
+  color: inherit;
+}
+
+.menu ul {
+  display: flex;
+  list-style: none;
+}
+
+.menu ul li a {
+  display: block;
+  font-size: 1.9rem;
+  color: var(--blue);
+  position: relative;
+  padding: 1.7rem;
+  transition: all 300ms ease-in-out;
+
+  &:hover {
+    color: var(--aquaBlue);
+  }
+}
+
+.menu ul li a::after {
+  content: '';
+  position: absolute;
+  bottom: 1.2rem;
+  left: 25%;
+  width: 0%;
+  height: 0.2rem;
+  background-color: crimson;
+  transition: all 300ms ease-in-out;
+}
+
+.menu ul li a:hover::after {
+  width: 55%;
+} 
