--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:ital,wght@0,400;0,700;1,400&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Poppins:ital,wght@0,400;0,700;1,400&display=swap');
 :root {
   --white: #F0F0F2;
   --blue: #023059;
@@ -22,6 +21,7 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
+  line-height: 1.5;
   font-size: 2rem;
 }
 
@@ -63,7 +63,6 @@ a {
   background-size: cover;
   background-position: center center;
   color: var(--white);
-  margin-top: 3rem;
 }
 
 .white-bg {
@@ -86,7 +85,12 @@ a {
   left: 0;
   right: 0;
   width: 100%;
+  z-index: 1;
   border-bottom: 0.1rem solid var(--lightGray);
+}
+
+.menu-spacing {
+  height: 6.5rem;
 }
 
 .menu-content {
@@ -137,4 +141,35 @@ a {
 
 .menu ul li a:hover::after {
   width: 55%;
-} 
+}
+
+.intro-content {
+  position: relative;
+  top: -6rem;
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  gap: var(--gap);
+  height: 100vh;
+}
+
+.intro-text-content, .intro-img {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+}
+
+.intro-text-content h2 {
+  font-size: 5.5rem;
+  margin-bottom: 5rem;
+  line-height: 1.1;
+  text-transform: uppercase;
+}
+
+.intro-text-content p {
+  text-align: justify;
+}
+
+.intro-img img{
+  max-width: 100%;
+  height: auto;
+}
