--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,6 +17,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -36,6 +37,9 @@ h1 {
 
 h2 {
   font-size: 5.5rem;
+  margin-bottom: 5rem;
+  line-height: 1.1;
+  text-transform: uppercase;
 }
 
 h3 {
@@ -52,6 +56,10 @@ h5 {
 
 h6 {
   font-size: 3.2rem;
+}
+p {
+  margin-bottom: 3rem;
+  line-height: 1.3;
 }
 
 a {
@@ -86,7 +94,7 @@ a {
   right: 0;
   width: 100%;
   z-index: 1;
-  border-bottom: 0.1rem solid var(--lightGray);
+  box-shadow: 0px 0px 7px rgba(0,0,0, .5);
 }
 
 .menu-spacing {
@@ -158,13 +166,6 @@ a {
   justify-content: center;
 }
 
-.intro-text-content h2 {
-  font-size: 5.5rem;
-  margin-bottom: 5rem;
-  line-height: 1.1;
-  text-transform: uppercase;
-}
-
 .intro-text-content p {
   text-align: justify;
 }
@@ -172,4 +173,13 @@ a {
 .intro-img img{
   max-width: 100%;
   height: auto;
+}
+
+.top3-content {
+  height: 100vh;
+  max-width: 64rem;
+  display: flex;
+  flex-flow: column wrap;
+  text-align: center;
+  justify-content: center;
 }
