--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -80,7 +80,7 @@ a {
 .main-content {
   max-width: 120rem;
   margin: 0 auto;
-  padding: var(--gap);
+  padding: 6rem var(--gap);
 }
 
 .main-section {
@@ -157,7 +157,7 @@ a {
   display: grid;
   grid-template-columns: 1fr 1.5fr;
   gap: var(--gap);
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .intro-text-content, .intro-img {
@@ -176,10 +176,11 @@ a {
 }
 
 .top3-content {
-  height: 100vh;
+  min-height: 100vh;
   max-width: 64rem;
   display: flex;
-  flex-flow: column wrap;
+  flex-direction: column;
+  flex-wrap: nowrap;
   text-align: center;
   justify-content: center;
 }
@@ -187,7 +188,8 @@ a {
 .description-content {
   height: 100vh;
   display: flex;
-  flex-flow: column wrap;
+  flex-direction: column;
+  flex-wrap: nowrap;
   justify-content: center;
 }
 .drescription-heading {
