--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Poppins:ital,wght@0,400;0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap");
+
 :root {
   --white: #F0F0F2;
   --blue: #023059;
   --lightBlue: #065473;
   --aquaBlue: #08748C;
   --gren: #02735E;
+  --lightGrenn: #6ab04c;
   --lightGray: #cecece
   --red: #dc143c;
   --gap: 3rem;
@@ -66,6 +69,37 @@ p {
 a {
   text-decoration: none;
 }
+
+table {
+  min-width: 36rem;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+thead th, tfoot td {
+  background-color: var(--blue);
+}
+
+table td, table th {
+  border: 0.2rem solid var(--lightBlue);
+  text-align: left;
+  padding: 1rem;
+  white-space: nowrap;
+}
+
+table caption {
+  text-align: left;
+  font-size: 1.4rem;
+  font-style: italic;
+  margin-bottom: 1rem;
+}
+
+tfoot td {
+  text-align: center;
+  font-size: 1.4rem;
+  font-style: italic;
+}
+
 
 .main-bg {
   background-image: url('../img/bg-color2.svg');
@@ -240,4 +274,84 @@ a {
 
 .gallery-img img:hover {
   transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
+}
+
+.table-content {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.table-content h2, p {
+  text-align: center;
+}
+
+
+.pricing-content {
+  display: flex;
+  flex-wrap: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.plan {
+    background-color: var(--white);
+    color: var(--blue);
+    padding: 2.5rem;
+    margin: 1.2rem;
+    border-radius: 1rem;
+    text-align: center;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.price {
+  margin-bottom: 1rem;
+  font-size: 3rem;
+}
+
+ul.features {
+  list-style-type: none;
+  text-align: left;
+}
+
+.features li {
+  margin: .5rem;
+}
+
+button {
+  border: none;
+  width: 100%;
+  padding: 12px 35px;
+  margin-top: 1rem;
+  background-color: var(--lightGrenn);
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: all 300ms ease-in-out;
+
+  &:hover {
+    background-color: var(--aquaBlue);
+  }
+}
+
+.popular {
+  border: 2px solid var(--lightGrenn);
+  position: relative;
+  transform: scale(1.08);
+}
+
+.popular span {
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--lightGrenn);
+  color: #fff;
+  padding: 4px 20px;
+  font-size: 18px;
+  border-radius: 5px; 
 }
