--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -449,3 +449,31 @@ div.full-width {
   color: inherit;
   font-weight: bold;
 }
+
+@media (max-width: 800px) {
+  .intro-content, .grid {
+    grid-template-columns: 1fr;
+  }
+
+  .intro-content h2 {
+    font-size: 4.3rem;
+  }
+
+  .gallery-img {
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .gallery-img img {
+    width: 100%;
+  }
+
+  .table-content, .pricing-content {
+    display: block;
+  }
+
+  .plan {
+    margin-bottom: 3rem;
+  }
+}
