--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -450,6 +450,10 @@ div.full-width {
   font-weight: bold;
 }
 
+.close-menu {
+  display: none;
+}
+
 @media (max-width: 800px) {
   .intro-content, .grid {
     grid-template-columns: 1fr;
@@ -475,5 +479,53 @@ div.full-width {
 
   .plan {
     margin-bottom: 3rem;
+  }
+
+  .menu {
+    bottom: 0;
+    text-align: center;
+  }
+
+  .menu-content {
+    height: 100vh;
+  }
+
+  .menu-content, .menu-content ul {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .close-menu-label::after {
+    content: '☰';
+    position: fixed;
+    z-index: 2;
+    top: 2rem;
+    right: 2rem;
+    padding: .5rem;
+    border-radius: 15%;
+    background-color: var(--blue);
+    color: var(--white);
+    font-size: 2rem;
+    line-height: 3rem;
+    width: 3rem;
+    height: 3rem;
+    text-align: center;
+    cursor: pointer;
+  }
+
+  .close-menu:checked~.menu {
+    display: block;
+  }
+
+  .close-menu:checked~.close-menu-label::after {
+    content: '×';
+  }
+
+  .menu-spacing {
+    display: none;
   }
 }
