update background-color open menu

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -507,7 +507,7 @@ div.full-width {
     right: 2rem;
     padding: .5rem;
     border-radius: 15%;
-    background-color: var(--blue);
+    background-color: var(--gren);
     color: var(--white);
     font-size: 2rem;
     line-height: 3rem;
